--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -103,7 +103,7 @@ label[for="bt_menu"]{
 
 	/*Parallax effect*/
 
-.pimg1, .pimg2, .pimg3, .pimg4{
+.pimg1, .pimg2, .pimg3, .pimg{
 	position: relative;
 	opacity: 0.70;
 	background-position: center;
@@ -135,8 +135,9 @@ label[for="bt_menu"]{
 	background-image: url('../_imagens/img3.jpeg');
 	min-height: 100%;
 }
-.pimg4{
-	background-image: url('../_imagens/img5.jpeg');
+
+.pimg{
+	background-image: url('../_imagens/img3.jpeg');
 	min-height: 100%;
 }
 
@@ -203,39 +204,65 @@ iframe.inner{
 	/*Footer*/
 
 footer.rodape{
-	background-color: rgba(0,0,0,0.8);
 	font-family: 'Swis721 WGL4 BT';
-	font-size: 14px;
+	font-size: 15px;
 	width: 100%;
-	height: 100px;
+	height: 180px;
 	color: #fff;
 	text-align: center;
 	z-index: 6;
-	margin:0px;
-	padding: 0px;
-
-}
-
-
-.rodape ul{
-	list-style: none;
+	margin: auto;
+	background-image: url('../_imagens/img7.jpg');
+	background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
 	display: flex;
-	
-
 
 }
+
+
+.background{
+	background-color: rgba(0,0,0,0.7);
+	width: 100%;
+	height: 180px;
+	margin: auto;
+	transition: all 0.9s;
+}
+.background:hover{
+	background-color: rgba(0,0,0,0.3);
+	transition: all 0.9s;
 	/*Flexibilidade do Menu lateralmente*/
-.rodape ul li{
+}
+.footer-align{
 	flex-grow: 1;
+	padding-top: 80px;
+	list-style: none;
+}
 
-
+.footer-right{
+	float: right;
+	text-align: center;
+	width: 50%;
+}
+.footer-left{
+	float: left;
+	text-align: center;
+	width: 50%;
+}
+.icone{
+	transition: all 0.6s;
+}
+.icone:hover{
+	cursor: pointer;
+	transform: translateY(-5px);
+	transition: all 0.6s;
+	opacity: 0.4;
 }
 
 
 footer.rodape a{
 	text-decoration: none;
 	color: #fff;
-	font-size: 14px;
 	
 }
 .rodape a:hover{
