--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -16,6 +16,11 @@ html, body{
 	color: #666;
 }
 
+h2#hel{
+	font-family: open sans;
+	font-size: 80px;
+}
+
 #interface{
 	width: 100%;
 	height: 50px;
@@ -44,6 +49,39 @@ html, body{
 	/*Flexibilidade do Menu lateralmente*/
 .menu ul li{
 	flex-grow: 1;
+}
+
+.menu ul li a{
+	padding-bottom: 1px;
+}
+ul li.sub a:after{
+	content: '';
+	display: block;
+	margin:auto;
+	margin-top: 10px;
+	height: 2px;
+	width: 0px;
+	background: transparent;
+	transition: width .5s ease, background-color .5s ease;
+	
+	
+}
+
+ul li.sub a:hover:after{
+	width: 100%;
+	background: #fff;
+	height: 2px;
+	box-shadow: 0 0px 10px 5px #ff0000;
+	transition: width .5s ease, background-color .5s ease;
+}
+
+.footer-left span.sub{
+	width: 0;
+	height: 0;
+}
+
+.footer-left:hover span.sub{
+	width: 170px;
 }
 
 .menu a{
@@ -314,8 +352,29 @@ label[for="bt_menu"]{
 	height: 40px;
 	opacity: 0.9;
 	transition: 0.4s;
+}
+/*
+#logo:hover {
+
+	content: '';
+	display: block;
+	margin:auto;
+	margin-top: 10px;
+	height: 2px;
+	width: 0px;
+	background: transparent;
+	transition: width .5s ease, background-color .5s ease;
 	
-	
+
+
+
+
+	width: 100%;
+	background: #fff;
+	height: 2px;
+	box-shadow: 0 0px 10px 5px #ff0000;
+	transition: width .5s ease, background-color .5s ease;
+}
 }
 
 /*#logo:hover{
@@ -510,7 +569,7 @@ footer.rodape a{
 	}
 
 	#mobile_menu{
-		height: 100%;
+		height: 500px;
 	}
 		
 	#bt_menu:checked ~ .barra{
